z-index fix

--- a/src/app/componets/student/portfolio-strength/portfolio-strength.component.scss
+++ b/src/app/componets/student/portfolio-strength/portfolio-strength.component.scss
@@ -93,7 +93,7 @@ details {
     height: 16px;
     position: absolute;
     top: -8px;
-    z-index: 5;
+    z-index: 4;
   }
   ul {
     list-style: none;
